# Bakend_medizin

ApplicationLayer/: Cargo.toml
ApplicationLayer/src/: lib.rs
EnterpriseLayer/: Cargo.toml
FrameworksDrivers/: Cargo.toml  enzo.json  prueba.anzo.json
FrameworksDrivers/src/: lib.rs
FrameworksDrivers/src/Api/: Refresh_token.rs  Server.rs  login.rs
FrameworksDrivers/src/Framework/: Server.rs  login.rs  mod.rs
FrameworksDrivers/src/JsonWebToken/: jsonwebtoken.rs
FrameworksDrivers/src/Middleware/: middleware.rs
FrameworksDrivers/src/Repositori/: Repositori_inv.rs  mod.rs  repositori_farma.rs  repositori_localizacion.rs  repository_info.rs  repository_pedido.rs
FrameworksDrivers/src/Repositori/factory_repository_inventary/: cliente.rs  enzo.json  factory_repository.rs  mod.rs  repository.rs
FrameworksDrivers/src/Repositori/pedidos/: mod.rs  repositori_localizacion.rs  repository_info.rs  repository_medica.rs  repository_orden.rs  repository_pedido.rs  repository_raide.rs
FrameworksDrivers/src/Repositori/pedidos/factory_repository_inventary/: cliente.rs  factory_repository.rs  mod.rs  repository.rs
FrameworksDrivers/src/Websocket/: mod.rs
FrameworksDrivers/src/Websocket/server/: clientemessage.rs  connect.rs  disconnect.rs  message.rs  mod.rs  server.rs  websocket.rs
FrameworksDrivers/src/Websocket/session/: StreamHandle.rs  actor.rs  api.rs  clientemessage.rs  connect.rs  disconnect.rs  handler.rs  mod.rs  session.rs  wsServer.rs  wsmessage.rs
InterfaceAdapters/: Cargo.toml
InterfaceAdapters/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
(+67 files in other folders)
