[package]
name = "FrameworksDrivers"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "3.2.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
actix-web = "4.9.0"
actix-extra = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"
actix-web-httpauth="0.8.2"
actix-web-actors="4.3.1"
actix="0.13.5"
chrono="0.4.39"
tokio = { version = "1.43.0", features = ["full"] }
EnterpriseLayer={ path ="../EnterpriseLayer"}
ApplicationLayer={ path ="../ApplicationLayer"}
InterfaceAdapters={ path ="../InterfaceAdapters"}