[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["full"] }
EnterpriseLayer={ path ="../EnterpriseLayer"}
ApplicationLayer={ path ="../ApplicationLayer"}
InterfaceAdapters={ path ="../InterfaceAdapters"}
FrameworksDrivers={ path ="../FrameworksDrivers"}